finally fix on mobile!

--- a/src/style.css
+++ b/src/style.css
@@ -81,6 +81,8 @@ button {
     background-size: cover;
     overflow: hidden;
     width: 100%;
+    min-height: 100%;
+    height: 100%;
 }
 
 .id_div {
@@ -170,7 +172,7 @@ object {
 
     .list_div {
         width: 100%;
-        height: 58vh;
+        min-height: 100%;
     }
 
     .card{
@@ -217,12 +219,17 @@ object {
 .body_index {
     overflow: hidden;
     margin: 0pt;
+    min-height: 100%;
+    width: 100%;
 }
 
 .body_page {
     background-color: white;
     overflow: hidden;
     margin: 0pt;
+    height: 100%;
 }
 
-
+html {
+    height: 100%;
+}
